comment section init

--- a/front/src/components/Weather.css
+++ b/front/src/components/Weather.css
@@ -2,5 +2,17 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-align: center;
     height: 100vh;
+    width: 60vh;
+    padding: 50px;
+    background-color: lightblue;
+}
+
+.day1, .day2, .day3, .day4, .day5, .day6, .day7 {
+    text-align: left;
+    text-transform: uppercase;
+    line-height: 5;
+    font-weight: 700;
+    font-size: 1.2em;
 }
