--- a/front/src/components/Header.css
+++ b/front/src/components/Header.css
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgb(37, 41, 68);
     z-index: 1000;
 } 
 
