--- a/front/src/components/Weather.css
+++ b/front/src/components/Weather.css
@@ -6,7 +6,7 @@
     height: 100vh;
     width: 60vh;
     padding: 50px;
-    background-color: lightblue;
+    background-color: rgba(173, 216, 230, 0.6);
     border-radius: 12px;
     margin-top: 150px;
     margin-bottom: 50px;
